# hitag2crack

./: CMakeLists.txt  deviceinfo.c  hitagcrypto.c  ht2crack5gpu.c  ht2crack5kernel.cl  ht2crackutils.c
include/: deviceinfo.h
